tests/invalid/ann_assign_empty_dict_wrong_type/main.py
def run_case() -> None:
    y: int = {}

if __name__ == "__main__":
    run_case()
